--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,39 @@
 * {
   font-family: Verdana, Inter, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  margin-top: 50px;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+li {
+  margin: 10px auto;
+  padding: 25px;
+  width: 300px;
+  height: 100px;
+  text-align: center;
+}
+
+.butter-brickle {
+  background-color: blanchedalmond;
+}
+
+.choc-chip {
+  background-color: burlywood;
+}
+
+.white-choc-raspberry {
+  background-color: rgba(255, 0, 0, 0.333);
 }
